[#16] 검색기능 코드 정리 및 redis 분류등록 기능 수정 (#27)