@@ -100,9 +100,4 @@ tasks.named('test') {
 tasks.named('checkstyleTest') {
     enabled = false
 }
-//Test 관련 의존성
-tasks.withType(Test) {
-    useJUnitPlatform()  //JUnit 5 기반 테스트를 사용하겠다는 설정
-    jvmArgs "-XX:+EnableDynamicAgentLoading" //ByteBuddy/Mockito 등의 동적 에이전트 경고 제거를 위한 JVM 플래그
-    jvmArgs '-Xshare:off' // JVM 아규먼트 설정
-}
+
